--- a/Labb2/Labb2.csproj
+++ b/Labb2/Labb2.csproj
@@ -18,4 +18,8 @@
     </Content>
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net" Version="7.17.5" />
+  </ItemGroup>
+
 </Project>
